# cpp-template

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
src/: main.cpp
test/: test.cpp
